--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ selenium==4.21.0
 chromadb==0.5.0
 streamlit==1.35.0
 pandas==2.0.2
-sqlite3>=3.35
+sqlite>=3.35
 python-dotenv==1.0.0
 langchain_core
